Bug 114766 - assert when editing a new dialog (gtk3 only)
Summary: assert when editing a new dialog (gtk3 only)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
5.4.2.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.5 target:6.0.0.2 target:6.1.0
Keywords: haveBacktrace
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2017-12-30 08:28 UTC by Mark Hung
Modified: 2018-02-08 09:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (8.18 KB, text/plain)
2017-12-30 10:29 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2017-12-30 08:28:14 UTC
Description:
Crashed when editing a new dialog.

Steps to Reproduce:
1. Tools > Options > Organize Dialogs.
2. Click "New..."
3. Click Edit to edit the dialog

Actual Results:  
Dialog editor show up.

Expected Results:
It hangs.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 5.4.2.2
Build ID: 1:5.4.2-0ubuntu0.17.10.1
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: group

* Reproducible both with and without hardware acceleration.
* Not reproducible with Windows.


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:57.0) Gecko/20100101 Firefox/57.0
Comment 1 Julien Nabet 2017-12-30 10:20:33 UTC
You mixed actual results and expected results but with master sources updated yesterday, I could reproduce this.
Comment 2 Julien Nabet 2017-12-30 10:29:55 UTC
Created attachment 138746 [details]
bt with debug symbols
Comment 3 Julien Nabet 2017-12-30 10:33:04 UTC
It seems specific
Comment 4 Julien Nabet 2017-12-30 10:33:50 UTC
Caolán: since it concerns vcl and more particularly gtk3, thought you might be interested in this one.
Comment 5 Xisco Faulí 2018-01-02 10:59:28 UTC
> Steps to Reproduce:
> 1. Tools > Options > Organize Dialogs.
> 2. Click "New..."
> 3. Click Edit to edit the dialog

I guess you mean Tools > Macros > Organize Dialog?
if so, I can't reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: 2bf1cc7372088ec31ac5f0fb60de57feda59d3b7
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 6 Xisco Faulí 2018-01-03 17:59:15 UTC
(In reply to Xisco Faulí from comment #5)
> > Steps to Reproduce:
> > 1. Tools > Options > Organize Dialogs.
> > 2. Click "New..."
> > 3. Click Edit to edit the dialog
> 
> I guess you mean Tools > Macros > Organize Dialog?
> if so, I can't reproduce it in

@Julien Nabet, is this right? which gtk version do you have? mine is 3.22 and I can't reproduce. Is there any missing step?
Comment 7 Julien Nabet 2018-01-03 18:54:58 UTC
Xisco: I got 3.22.26-2.
It wasn't explicit in my previous comments but I had an assert, not a crash.
So if you don't use a debug build you won't reproduce what I got.
Comment 8 Commit Notification 2018-01-08 14:19:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b5e9fc18cb51e52f2f3f5b35cba7fed5cd6cb122&h=libreoffice-5-4

Resolves: tdf#114766 gtk3 solar mutex assert

It will be available in 5.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2018-01-08 15:07:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ca9526f42a1eac5aa3ff801e017636ca0e618ebd&h=libreoffice-6-0

Resolves: tdf#114766 gtk3 solar mutex assert

It will be available in 6.0.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2018-01-08 19:02:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e7980e60ee60d9707780d0eee3841850351febf6

Resolves: tdf#114766 gtk3 solar mutex assert

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2018-02-07 23:38:20 UTC
A polite ping to Caolán McNamara: is this bug fixed? if so, could you
please close it as RESOLVED FIXED ? Thanks
Comment 12 Caolán McNamara 2018-02-08 09:40:22 UTC
yeah, fixed this