Resolves: tdf#114766 gtk3 solar mutex assert

since

commit 33de587e95dddfc8e3c89b84f90b3d1bca823dae
Date:   Tue Mar 17 12:56:54 2015 +0530

    tdf#88230: cleanup solar mutex yielding

    Use SolarMutexReleaser, instead.

Change-Id: Ied2c78f95592c87b7908d14e9ab6c78e62f987e7
Reviewed-on: https://gerrit.libreoffice.org/47592
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>